Update translations export, add 1/0 notation for correct response, dynamic cross alignment to faces in videos (#17)
* add prettier config and format all files

* add .ts to typescript file imports

* add .ts to emotionrecognitiontask import

* have buttons last clicked button stay active until another one is clicked

* Add proper tags and kind to tasks index.ts file #7

* add source tag for video cover generator function

* using style.css within the ODC index.ts file

* add new ts configuration file for ODC impletemented version

* center video element in all task creation functions

* complete media Content config file for ODC implementation #7

* Add proper directory paths for all media f files

* use OdcMediaContent for media file config instead

* add src assests to git ignore

* taking media files from src/assets folder instead

* remove intruction prompts from stimuli

* remove unused translations

* remove redundant div container in addContinueButton

* remove empty prompts

* make quotations consistent in ODCMediaContent.ts

* reduce cross size

* convert i18n translations to proper export function method

* convert correct response to a 1 or 0 notation per maximes request

* make jspsch a type varaible

* update import for proper odc implementation

* dynamic imports to satisfy odc bundler

* make video fill container instead of cover

* convert cross into div and make dynamic

* add default cross position in argument

* add dynamic sizing to vicross in emotion selection task stage

* add dynamic top and left pos to most of the audio video files

* add dynamic cross placement to all audio-video files

* added dynamic cross for all video files

* add dynamic sizing to videos and video cover in css

--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,40 @@ h1 {
   align-items: center;
   gap: 40px;
 }
+
+:root {
+  --video-base-width: 720px;
+  --video-base-height: 576px;
+}
+
 /* Style for the video container */
 .video-container {
   position: relative;
-  width: 50vw;
-  height: 40vh;
+  width: calc(var(--video-base-width) / 2);
+  height: calc(var(--video-base-height) / 2);
   overflow: hidden;
+}
+/* calc(--var(--video-base-width) / 1.5) */
+
+@media (min-width: 500px) {
+  .video-container {
+    width: calc(var(--video-base-width) / 1.5);
+    height: calc(var(--video-base-height) / 1.5);
+  }
+}
+
+@media (min-width: 720px) {
+  .video-container {
+    width: calc(var(--video-base-width) / 1.2);
+    height: calc(var(--video-base-height) / 1.2);
+  }
+}
+
+@media (min-width: 1700px) {
+  .video-container {
+    width: calc(var(--video-base-width)*1.1);
+    height: calc(var(--video-base-height)*1.1);
+  }
 }
 
 /* The black overlay */
@@ -42,12 +70,40 @@ h1 {
 /* The video element */
 video {
   position: absolute;
-  object-fit: cover;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100%; 
   height: 100%;
 }
 .spacedButtons {
   padding: 10px;
+}
+
+.cross {
+  width: 2.22vh; /* Fixed pixel size for visibility */
+  height: 2.22vh;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.cross:before, .cross:after {
+  background-color: white;
+  content: '';
+  position: absolute;
+}
+
+.cross:before {
+  width: 100%;
+  height: 0.22vh;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.cross:after {
+  width: 0.22vh;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
